Mejorado posibles bugs a la hora de buscar datos por ISBN usando otras editoriales. Eliminadas funciones o codigo deprecated. Eliminado las claves de API de forma estatica