@@ -4,8 +4,9 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Iterator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -13,10 +14,12 @@ import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
+import Funcionamiento.Utilidades;
+
 public class ApiComicVine {
-	public static void main(String[] args) throws JSONException {
-		String apiKey = "d8c00f9d781af5da1232e769b78cb0b68f0960a0";
-		String nombrePersona = "Barry Windsor-Smith";
+	public static void main(String[] args) throws JSONException, URISyntaxException {
+		String apiKey = Utilidades.cargarApiComicVine();
+		String nombrePersona = "J. H. Williams III";
 
 		try {
 			System.out.println(searchPersonAndExtractInfo(apiKey, nombrePersona));
@@ -25,16 +28,32 @@ public class ApiComicVine {
 			e.printStackTrace();
 		}
 	}
+	
+	/**
+	 * Esta función toma una cadena de entrada y elimina los espacios entre letras y puntos.
+	 * Busca cualquier letra seguida de un punto, seguida de uno o más espacios, y luego otra letra.
+	 * Luego, reemplaza esto por la primera letra, seguida de un punto y la segunda letra,
+	 * lo que elimina los espacios entre ellas.
+	 *
+	 * @param input La cadena de entrada que se va a procesar.
+	 * @return La cadena modificada sin espacios entre letras y puntos.
+	 */
+	public static String eliminarEspaciosEntreLetrasYPuntos(String input) {
+	    return input.replaceAll("(\\w)\\.(\\s+)(\\w)", "$1.$3");
+	}
 
 	// Función para buscar una persona y extraer información
 	public static String searchPersonAndExtractInfo(String apiKey, String nombrePersona)
-			throws IOException, JSONException {
+			throws IOException, JSONException, URISyntaxException {
+		nombrePersona = eliminarEspaciosEntreLetrasYPuntos(nombrePersona);
 		// Escapar espacios en el nombre de la persona para la URL
 		String nombrePersonaEscapado = nombrePersona.replace(" ", "%20");
 
 		// Crear una URL para la solicitud
-		URL url = new URL("https://comicvine.gamespot.com/api/people/?api_key=" + apiKey + "&format=json&filter=name:"
-				+ nombrePersonaEscapado);
+		URI uri = new URI("https://comicvine.gamespot.com/api/people/?api_key=" + apiKey + "&format=json&filter=name:" + nombrePersonaEscapado);
+
+		// Convertir la URI en una URL
+		URL url = uri.toURL();
 
 		// Abrir una conexión HTTP
 		HttpURLConnection connection = (HttpURLConnection) url.openConnection();
@@ -81,6 +100,9 @@ public class ApiComicVine {
 
 	// Método para extraer las palabras "writer" o "artist" si aparecen en el texto
 	private static String extractWriterOrArtist(String text) {
+		
+		System.out.println(text);
+		
 	    // Utilizar expresiones regulares para extraer la primera coincidencia de "writer" o "artist"
 	    Pattern pattern = Pattern.compile("\\b(writer|artist)\\b", Pattern.CASE_INSENSITIVE);
 	    Matcher matcher = pattern.matcher(text);
